<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_school_white_24dp"
            android:title="@string/titleWelcome" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_messages" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/nav_chat" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_txt"/>
    </group>

    <item android:title="@string/nav_comunication">
        <menu>
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_website"
                android:title="@string/nav_school_name" />
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/nav_facebook" />
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/twitter"
                android:title="@string/nav_twitter" />

        </menu>
    </item>
</menu>