<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_AddTaskDialogFragment"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="false"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RelativeLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_taskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:theme="@style/TextInputLayoutTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_taskName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/title_taskName"
                        android:inputType="textPersonName"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row1"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_taskType"
                    android:textColor="@color/colorGrayText"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/type_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="3"
                    android:spinnerMode="dropdown"
                    android:theme="@style/ThemeOverlay.AppCompat.Light" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row2"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_unit"
                    android:textColor="@color/colorGrayText"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/unit_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="3"
                    android:spinnerMode="dropdown"
                    android:theme="@style/ThemeOverlay.AppCompat.Light" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/row4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row3"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/iv_select_date"
                    android:layout_toLeftOf="@+id/iv_select_date"
                    app:helperText="@string/date_helper_text"
                    app:theme="@style/TextInputLayoutTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/title_taskDeadLine"
                        android:inputType="date"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_select_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/select_date"
                    app:srcCompat="@drawable/ic_date_range_gray_24dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/row5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row4"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/iv_select_hour"
                    android:layout_toLeftOf="@+id/iv_select_hour"
                    app:helperText="@string/hour_helper_text"
                    app:theme="@style/TextInputLayoutTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_taskHour"
                        android:inputType="time"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_select_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/select_hour"
                    app:srcCompat="@drawable/ic_access_time_gray_24dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/row6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row3"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="4dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/title_file_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_uploadFile"
                    android:textColor="@color/colorGrayText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_file_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toStartOf="@id/iv_upload_file"
                    android:layout_toLeftOf="@id/iv_upload_file"
                    android:layout_toEndOf="@+id/title_file_upload"
                    android:layout_toRightOf="@+id/title_file_upload"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:id="@+id/iv_upload_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:contentDescription="@string/upload_file"
                    app:srcCompat="@drawable/ic_file_upload_gray_24dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/add_task"
                android:textAllCaps="false" />

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>

