<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toLeftOf="@+id/rl_icons"
        android:layout_toStartOf="@+id/rl_icons">

        <TextView
            android:id="@+id/titleStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_student_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/titleStudent"
            android:layout_toEndOf="@+id/titleStudent"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toLeftOf="@+id/rl_icons"
        android:layout_toStartOf="@+id/rl_icons"
        android:layout_below="@id/row1">

        <TextView
            android:id="@+id/titleFileDelivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_student_file"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/titleFileDelivered"
            android:layout_toEndOf="@+id/titleFileDelivered"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toLeftOf="@+id/rl_icons"
        android:layout_toStartOf="@+id/rl_icons"
        android:layout_below="@id/row2">

        <TextView
            android:id="@+id/titleGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_student_grade"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/titleGrade"
            android:layout_toEndOf="@+id/titleGrade"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/iv_correct_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_correct"
            app:srcCompat="@drawable/ic_school_gray_24dp"/>

        <ImageView
            android:id="@+id/iv_download_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/iv_correct_task"
            android:contentDescription="@string/download_file"
            app:srcCompat="@drawable/ic_file_download_gray_24dp" />

    </RelativeLayout>



</RelativeLayout>